# NodeCPub

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  conanfile.py  data.cfg  docker-compose.yaml  users.db
src/: .clang-tidy  admin.c  admin_server.c  base64.c  client.c  client.py  cp_worker.c  generate_virus_patterns.py  jwt.c  pe_scanner.c  queue.c  scanner.c  server.c  sha256.c  user_server.c  watcher.c  web_server.c  worker.c
src/headers/: base64.h  cp_worker.h  pe_scanner.h  queue.h  scanner.h  server.h  sha256.h  watcher.h  worker.h
